Search Tasks of one space - MEED-9336 - Meeds-io/MIPs#200 (#516)